--- a/bootrsrap.html
+++ b/bootrsrap.html
@@ -13,15 +13,13 @@
 </head>
 
 <body>
-    <header>
+ 
         <div class="container-fluid EBusiness-container p-0">
             <div class="row">
 
-                <div class="bg-image"
-                    style="background-image:url('/img/hero-carousel/3.jpg'); background-repeat: no-repeat; background-size: cover; height: 75vh; position: fixed; top: 0; left: 0; width: 100%;">
-                </div>
 
-                <nav class="navbar navbar-expand-md bg-dark opacity-75">
+
+                <nav class="navbar navbar-expand-md bg-dark opacity-75 z-1 ">
                     <div class="col-sm-3 text-end fs-1 p-0 text-info bg-dark"> e </div>
                     <div class="col-sm-4 p-0 fs-1 text-white bg-dark"> Business </div>
                     <div class="col-sm-5 bg-dark ">
@@ -96,9 +94,12 @@
                         </ul>
                     </div>
                 </nav>
+                <div class="col-12">
+                    <img class ="position-absolute top-0 start-0" src="img/background/page-header.jpg" alt="">
+                </div>
             </div>
         </div>
-    </header>
+
 
     <div class="about-area area-padding">
         <div class="container position-static">
